# eetr-auth

./: .dev.vars.example  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  PLAN.md  README.md  cloudflare-env.d.ts  open-next-worker.d.ts  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  worker.ts  wrangler.jsonc
.cursor/rules/: architecture.mdc  ui-icons.mdc
.cursor/skills/progression-ai-auth-architecture/: SKILL.md
apps/argon-hasher/: Cargo.toml  README.md  rust-toolchain.toml
apps/argon-hasher/src/: core.rs  lib.rs  main.rs
apps/auth/: .dev.vars.example  .env.example  README.md  cloudflare-env.d.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts  worker.ts
apps/auth/db/: README.md  schema.sql  (+7 more)
argon-hasher/: Cargo.toml  README.md  wrangler.toml
argon-hasher/src/: lib.rs
db/: README.md  migration-20260320-site-settings.sql  migration-20260321-mfa-otp-failed-attempts.sql  migration-20260405-passkeys.sql  schema.sql
docs/: ARCHITECTURE.md  CLOUDFLARE_TEMPLATE.md  DEPLOYMENT.md  FEATURES.md  SERVICE_DI_AUDIT.md  UX_GUIDELINES.md
infra/: INSTALL.md
infra/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
scripts/: create-admin.mjs  generate-local-jwt-cert.mjs  provision-env.mjs  run-d1-migrate.mjs  setup-hmac-key.sh  setup-jwt-secrets.mjs  terraform-output.mjs
src/: auth.ts
src/app/: page.tsx  sign-in-form.tsx
src/context/: admin-state.ts
src/lib/: public-site-settings.ts
src/types/: cloudflare-env-augment.d.ts  next-auth.d.ts
(+231 files in other folders)
