[package]
name = "argon-hasher"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[lib]
crate-type = ["cdylib"]

[dependencies]
argon2 = "0.5"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
worker = "0.7.5"

[profile.release]
lto = true
codegen-units = 1
